# se05x-matter-support

./: .gitmodules  BUILD.gn  se05x_config.h  se05x_platform.c  se05x_platform.h
matter/: DeviceAttestationCredsProviderImpl.cpp  DeviceAttestationCredsProviderImpl.h  SE05xCommissionableDataProvider.cpp  SE05xCommissionableDataProvider.h  SE05xDeviceAttestationCredsProvider.cpp  SE05xDeviceAttestationCredsProvider.h
se051h/: se05x_attestation.c  se05x_attestation.h  se05x_spake2p.c  se05x_spake2p.h  se05x_t4t.c
se05x/: se05x_attestation.c  se05x_attestation.h  se05x_constant.h  se05x_session.c  se05x_session.h  se05x_spake2p.c  se05x_spake2p.h  se05x_t4t.h
